<resources>
    <string name="app_name">西邮Steward</string>
    <string name="title_activity_syllabus">Syllabus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="student_number">学号</string>
    <string name="password">智慧校园密码</string>
    <string name="loginbtn">Login</string>
    <string name="Remember">Remember Password</string>
    <string name="authcode">验证码</string>
    <string name="NOT_MSG">暂时无数据</string>


    <string name="YT18">雁塔校区18层楼</string>
    <string name="CAXB">长安校区西区基础教学B楼</string>
    <string name="CAXA">长安校区西区基础教学A楼</string>
    <string name="CAYF">长安校区东区逸夫楼</string>
    <string name="SY1">1号实验楼</string>
    <string name="SY2">2号实验楼</string>
    <string name="XQ">西区</string>


    <string name="CET4orCET6">请输入15位笔试或口试准考证号</string>
    <string name="CET4orCET6Name">姓名(超过3个字，输入前3个字)</string>

</resources>
