<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/xiyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/xupt_logo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/xiyoulogo" />

        <ImageView
            android:id="@+id/xupt_logo"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/xiyou"
            android:background="@drawable/xupt" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/user" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterOverflowTextAppearance="@style/OverflowTextAppearance"
            app:counterTextAppearance="@style/TextAppearance"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextInputError">

            <com.example.dickjampink.logintest.EditText.OnClearEditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:hint="@string/student_number"
                android:drawableEnd="@drawable/delete"
                android:inputType="number"
                android:textColor="@color/colorEditText"
                android:textColorHint="@color/colorEditText" >
            </com.example.dickjampink.logintest.EditText.OnClearEditText>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <ImageView
            android:background="@drawable/passw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextInputError"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/LoginButton">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorEditText"
                android:textColorHint="@color/colorEditText" />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_code"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:layout_marginStart="40dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextInputError"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/LoginButton"
            >

            <EditText
                android:id="@+id/authCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                android:hint="@string/authcode"
                android:textColor="@color/colorEditText"
                android:textColorHint="@color/colorEditText" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/authImage"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_marginStart="60dp"
            android:id="@+id/remenber_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remember"
            android:textColor="@color/colorEditText"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login"
        android:text="@string/loginbtn"
        android:textColor="#FCFAF2" />


</LinearLayout>